fix: mobile css login overflow Resolves #50

--- a/sass/account/part.module.sass
+++ b/sass/account/part.module.sass
@@ -4,13 +4,16 @@ div.content
     min-height: calc( 100vh - 68px )
     & h1.title
         font-size: 32px
-        font-weight: 600
+        font-weight: 500
         margin-bottom: 10px
+        opacity: .9
     & p.desc
         font-size: 20px
         margin: 0
         margin-bottom: 10px
+        opacity: .8
     & h2
         font-size: 26px
-        font-weight: 500
+        opacity: .8
+        font-weight: 400
         margin-bottom: 10px
