--- a/sass/account/security/page.module.sass
+++ b/sass/account/security/page.module.sass
@@ -4,8 +4,9 @@ div.content
     min-height: calc( 100vh - 68px )
     & h1.title
         font-size: 32px
-        font-weight: 600
+        font-weight: 500
         margin-bottom: 10px
+        opacity: .9
     & div.devices
         & h2
             margin: 10px 0 5px 0
