--- a/sass/login.module.sass
+++ b/sass/login.module.sass
@@ -34,7 +34,7 @@ section.box
             @media screen and (max-width: 900px)
                 margin-bottom: -150px
             @media screen and (max-width: 780px)
-                opacity: 0
+                display: none
         &.right
             margin-top: 0
             position: absolute
@@ -48,7 +48,7 @@ section.box
             @media screen and (max-width: 900px)
                 margin-top: -200px
             @media screen and (max-width: 780px)
-                opacity: 0
+                display: none
         &.button
             margin-top: 0
             margin-left: 5px
