--- a/sass/page.module.sass
+++ b/sass/page.module.sass
@@ -86,9 +86,7 @@ section.hero
             top: -250px
             transform: rotate(-10deg)
         @media screen and (max-width: 700px)
-            opacity: 0
-            width: 0
-            height: 0
+            display: none
 
 section.word
     width: 100%
